Trying to fix stretched mockup images on mobile devices. Updated CV.

--- a/src/components/Project.scss
+++ b/src/components/Project.scss
@@ -130,9 +130,9 @@
 }
 
 .mockup {
+    height: fit-content;
     img {
         width: 80em;
-        height: 100% !important;
         margin: 1em auto 1em auto;
     }
 }
